--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
   },
   "author": "Jack Hsu",
   "license": "ISC",
-  "devDependencies": {}
+  "devDependencies": {
+    "typescript": "4.8.2",
+    "yargs-parser": "21.1.1"
+  },
+  "dependencies": {
+    "semver": "7.3.8"
+  }
 }
